# SnakeGame

./: CMakeCache.txt  CMakeLists.txt  SnakeGame.cbp  cmake_install.cmake  main.cpp
Common/: CMakeLists.txt  Common.h  Common.hpp
Game/: Game.cpp  Game.h
GameOver/: GameOver.cpp  GameOver.h
GamePlay/: GamePlay.cpp  GamePlay.h
MainMenu/: MainMenu.cpp  MainMenu.h
PauseMenu/: PauseMenu.cpp  PauseMenu.h
ResourceManager/: ResourceManager.cpp  ResourceManager.h
Snake/: Snake.cpp  Snake.h
State/: State.h  StateManager.cpp  StateManager.h
